“你做了哪些改變”

--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
             <div class="experiences">
                 <div class="experience">
                     <img src="img/experience-company-logo1.svg" alt="">
-                    <h3 class="job-title">job title</h3>
+                    <h3 class="job-title">Job title</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum itaque ab impedit doloribus repudiandae ipsam, veniam minima quos debitis facilis. Tenetur omnis quo obcaecati repellendus, enim libero nulla nam necessitatibus expedita placeat voluptatibus tempora sint veniam illo officiis iste, laborum eaque eum non ducimus natus incidunt. Aliquid enim totam ut?</p>
                 </div>
                 <div class="experience">
                     <img src="img/experience-company-logo2.svg" alt="">
-                    <h3 class="job-title">job title</h3>
+                    <h3 class="job-title">Job title</h3>
                     <p>Voluptas maxime quisquam, velit totam voluptatibus reiciendis repudiandae impedit possimus quaerat enim sequi, iure adipisci placeat nulla assumenda quidem explicabo hic. Tenetur tempora repellat iure non quam recusandae dignissimos, nobis facere hic quaerat, at possimus soluta omnis assumenda deleniti, ex adipisci culpa cumque reiciendis labore, placeat laudantium ad quasi fugiat!</p>
                 </div>
                 <div class="experience">
                     <img src="img/experience-company-logo3.svg" alt="">
-                    <h3 class="job-title">job title</h3>
+                    <h3 class="job-title">Job title</h3>
                     <p>Animi architecto illum quas, reiciendis, est nam alias aperiam. Accusamus cumque magni eos, eveniet dolore mollitia deleniti quia aut omnis recusandae molestias voluptas! Quo necessitatibus nostrum vel minima alias, distinctio, error et, natus dicta dolorem velit cum nulla dignissimos porro impedit a esse consequatur voluptatum culpa harum fugit odio suscipit.</p>
                 </div>
 
